--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 75%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.3px;
+  line-height: 1.5;
 }
 
 code {
