--- a/src/Card.css
+++ b/src/Card.css
@@ -10,3 +10,19 @@ header {
   font-size: 1.5rem;
   line-height: inherit;
 }
+
+.card-content {
+  margin-bottom: 12px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e0e0e7;
+}
+
+.activity-time__header {
+  margin-bottom: 8px;
+  font-size: 13px;
+  font-weight: bold;
+
+  img {
+    margin-right: 4px;
+  }
+}
