--- a/src/Card.css
+++ b/src/Card.css
@@ -24,5 +24,50 @@ header {
 
   img {
     margin-right: 4px;
+    width: 19.5px;
+    height: 19.5px;
+  }
+}
+
+.activity-time {
+  margin-bottom: 2px;
+  margin-left: 4px;
+
+  &__day {
+    margin-right: 6px;
+    border: 1px solid #e0e0e7;
+    border-radius: 3px;
+    width: 80px;
+    text-align: center;
+    font-weight: bold;
+  }
+  &__time {
+    position: relative;
+    width: 144px;
+    font-size: 1.5rem;
+    font-weight: bold;
+
+    span {
+      z-index: 2;
+      background: #fff;
+    }
+
+    &::after {
+      content: "";
+      width: 100%;
+      height: 1px;
+      border-top: 1px dotted #4d4d54;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+    }
+  }
+  &__start {
+    padding: 0 8px;
+  }
+  &__end {
+    margin-left: auto;
+    padding-left: 8px;
   }
 }
