--- a/src/Card.css
+++ b/src/Card.css
@@ -5,28 +5,22 @@ header {
 }
 
 .card-title {
+  align-items: initial;
   font-weight: bold;
   text-align: center;
   font-size: 1.5rem;
   line-height: inherit;
+  overflow: hidden;
+  height: 54px;
 }
 
 .card-content {
-  margin-bottom: 12px;
   padding-bottom: 10px;
   border-bottom: 1px solid #e0e0e7;
 }
 
 .activity-time__header {
   margin-bottom: 8px;
-  font-size: 13px;
-  font-weight: bold;
-
-  img {
-    margin-right: 4px;
-    width: 19.5px;
-    height: 19.5px;
-  }
 }
 
 .activity-time {
@@ -42,26 +36,7 @@ header {
     font-weight: bold;
   }
   &__time {
-    position: relative;
     width: 144px;
-    font-size: 1.5rem;
-    font-weight: bold;
-
-    span {
-      z-index: 2;
-      background: #fff;
-    }
-
-    &::after {
-      content: "";
-      width: 100%;
-      height: 1px;
-      border-top: 1px dotted #4d4d54;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      right: 0;
-    }
   }
   &__start {
     padding: 0 8px;
@@ -70,4 +45,109 @@ header {
     margin-left: auto;
     padding-left: 8px;
   }
+}
+
+.text-around {
+  padding: 0 8px;
+}
+
+.goal {
+  .text-around {
+    padding-right: 6px;
+  }
+}
+
+.description {
+  margin-top: 8px;
+}
+
+.role {
+  margin-top: 14px;
+  margin-bottom: 14px;
+
+  &__title {
+    .icon {
+      margin-left: 1px;
+    }
+  }
+  &__icon {
+    width: 20px;
+    height: 20px;
+  }
+  &__tank, &__healer, &__dps {
+    padding: 1px;
+    border-radius: 4px;
+  }
+  &__tank {
+    background-color: #1919e6;
+  }
+  &__healer {
+    background-color: #228b22;
+  }
+  &__dps {
+    background-color: #c61b25;
+  }
+  &__either-one {
+    margin-right: 15px;
+    margin-left: 15.5px;
+  }
+}
+
+.tag {
+  &__container {
+    width: 120px;
+    margin-right: auto;
+    padding-left: 5px;
+  }
+  &__item {
+    margin-bottom: 5px;
+    font-size: 10px;
+    font-weight: bold;
+  }
+}
+
+.item-title {
+  padding-right: 8px;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.number-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.icon {
+  margin-right: 4px;
+  width: 19.5px;
+  height: 19.5px;
+}
+
+.tag-icon {
+  width: 15px;
+  height: 15px;
+  margin-right: 8px;
+  border: 2px solid #313138;
+  border-radius: 50%;
+  background: #313138;
+}
+
+.dot-line {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    border-top: 1px dotted #4d4d54;
+    content: "";
+  }
+}
+
+.bg-white {
+  z-index: 2;
+  background: #fff;
 }
