--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,6 @@
 .card {
   width: 280px;
-  //margin: 0 16px;
+  /* margin: 0 16px; */
   margin: auto;
   overflow: initial;
   transition: all .2s ease-in-out;
@@ -22,7 +22,6 @@
   width: 280px;
   height: 364px;
   overflow: hidden;
-  background-color: #e24524;
   border-radius: 8px;
 
   img {
@@ -51,8 +50,6 @@
 }
 
 .party {
-  color:  #e24524;
-
   .icon {
     width: 28px;
     height: 28px;
@@ -68,7 +65,6 @@
   height: 62px;
   line-height: 62px;
   text-align: center;
-  background-color: #e24524;
   z-index: 2;
   color:  #fff;
   font-size: 14px;
@@ -212,7 +208,6 @@ header {
   &__icon-wrapper {
     margin-right: 4px;
     border: 3.5px solid #e24524;
-    background-color: #e24524;
   }
   .icon {
     margin-right: 0;
