--- a/src/Card.css
+++ b/src/Card.css
@@ -1,3 +1,6 @@
+/**
+ * structure
+ */
 
 .card {
   width: 280px;
@@ -39,6 +42,7 @@
   border-top-right-radius: 0;
   background-color: #fff;
   height: 424px;
+  box-shadow: 7px 12px 24px 0px rgb(6 0 1 / 15%);
 }
 
 .card-footer {
@@ -69,6 +73,7 @@
   z-index: 2;
   color:  #fff;
   font-size: 14px;
+  box-shadow: 3px 6px 7px 0px rgb(0 163 90 / 20%);
 }
 
 header {
