--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,25 +1,29 @@
 /**
  * main structure
  */
-.brand {
-  height: 38px;
-  background-color: #1b1b1b;
-}
-
-.header {
-  height: 80px;
-  background-color: #d6d4cf;
+.layout {
   font-family: "メイリオ", Meiryo, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "ＭＳ Ｐゴシック", Arial, Verdana, sans-serif;
   letter-spacing: normal;
+
+  .brand {
+    height: 38px;
+    background-color: #1b1b1b;
+  }
+  .header {
+    height: 80px;
+    background-color: #d6d4cf;
+  }
+  .global-nav {
+    height: 48px;
+    background-color: #000;
+  }
 }
 
+.layout {
 /**
  * header
  */
 .header {
-  &__inner {
-    width: 960px;
-  }
   .my-character {
     width: 320px;
     height: 60px;
@@ -68,4 +72,23 @@
       }
     }
   }
+}
+
+/**
+ * global-nav
+ */
+.global-nav {
+  .nav-item {
+    width: 160px;
+    height: 48px;
+    line-height: 48px;
+    text-align: center;
+    font-size: 14px;
+    color: #ccc;
+
+    &.active {
+      background-color: #2c2c2c;
+    }
+  }
+}
 }
