--- a/src/Layout.css
+++ b/src/Layout.css
@@ -30,6 +30,7 @@
     padding: 5px 7px;
     border-radius: 6px;
     background-color: #333;
+    box-shadow: 0 2px 3px rgb(0 0 0 / 40%);
 
     .icon {
       width: 45px;
