--- a/src/Layout.css
+++ b/src/Layout.css
@@ -90,7 +90,7 @@
     line-height: 48px;
     text-align: center;
     font-size: 14px;
-    color: #ccc;
+    color: #e0e0e0;
 
     &.active {
       background-color: #2c2c2c;
