--- a/src/Layout.css
+++ b/src/Layout.css
@@ -141,5 +141,25 @@
     width: 206px;
     border-left: none;
   }
+
+  .new-page {
+    width: 204px;
+    line-height: 48px;
+    margin-right: 14px;
+    border-radius: 24px;
+    background: #cc2944;
+    font-size: 16px;
+    color: #fff;
+    box-shadow: 3px 6px 7px 0px rgb(204 41 68 / 20%);
+
+    .icon {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
+    }
+  }
+  .empty {
+    width: 60px;
+  }
 }
 }
