募集情報のヘッダを追加

--- a/src/Page.css
+++ b/src/Page.css
@@ -7,6 +7,12 @@
     padding-right: 22px;
     color: #fff;
   }
+  .detail {
+    padding: 30px 104px 94px;
+    border-left: 10px solid var(--color-primary);
+    border-radius: 8px;
+    box-shadow: 4px 6px 16px 0px rgb(42 42 49 / 15%);
+  }
 }
 
 .pages {
@@ -43,6 +49,40 @@
 
       &.active {
         border-bottom-color: #fff;
+      }
+    }
+  }
+}
+/**
+ * detail
+ */
+.detail {
+  .header {
+    .title {
+      font-size: 32px;
+
+      .icon {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+      }
+    }
+    .adjuster {
+      width: 70px;
+    }
+    .watch {
+      width: 202px;
+      height: 48px;
+      padding-right: 4px;
+      border-radius: 24px;
+      background-color: #ebb50a;
+      box-shadow: 7px 12px 24px 0px rgb(235 181 10 / 20%);
+      font-size: 13px;
+
+      .icon {
+        width: 26.5px;
+        height: 26.5px;
+        margin-right: 1px;
       }
     }
   }
