--- a/src/Page.css
+++ b/src/Page.css
@@ -57,7 +57,18 @@
  * detail
  */
 .detail {
+  .text {
+    font-size: 22px;
+    line-height: 22px;
+  }
+  .text-s {
+    font-size: 11px;
+    line-height: 11px;
+    color: #9a9aa1;
+  }
   .header {
+    padding-bottom: 22px;
+
     .title {
       font-size: 32px;
 
@@ -83,6 +94,35 @@
         width: 26.5px;
         height: 26.5px;
         margin-right: 1px;
+      }
+    }
+  }
+  .activity {
+    height: 85px;
+    font-size: 22px;
+
+    .member {
+      width: 175px;
+      margin-right: 30px;
+
+      .member__inner {
+        height: 44px;
+        margin-top: 6px;
+
+        .text {
+          margin-top: 3px;
+        }
+      }
+      .icon-wrapper {
+        width: 44px;
+        height: 44px;
+        margin-right: 15px;
+        padding-top: 2px;
+        padding-left: 8px;
+      }
+      .icon {
+        width: 36px;
+        height: 36px;
       }
     }
   }
