--- a/src/Page.css
+++ b/src/Page.css
@@ -8,7 +8,7 @@
     color: #fff;
   }
   .detail {
-    padding: 30px 104px 94px;
+    padding: 30px 104px 30px 94px;
     border-left: 10px solid var(--color-primary);
     border-radius: 8px;
     box-shadow: 4px 6px 16px 0px rgb(42 42 49 / 15%);
@@ -79,7 +79,7 @@
       }
     }
     .adjuster {
-      width: 70px;
+      width: 60px;
     }
     .watch {
       width: 202px;
@@ -101,8 +101,58 @@
     height: 85px;
     font-size: 22px;
 
+    .time {
+      width: 593px;
+      height: 44px;
+
+      &__inner {
+        width: 534px;
+        height: 44px;
+      }
+      &__day {
+        width: 88px;
+        margin-right: 14px;
+        border: 1px solid var(--border-color-gray);
+        border-radius: 3px;
+        font-size: 12px;
+        text-align: center;
+        line-height: 20px;
+      }
+      &__between {
+        width: 150px;
+
+        &::after {
+          content: "";
+          width: 100%;
+          height: 1px;
+          border-top: 1px dotted #4d4d54;
+          position: absolute;
+          top: 50%;
+          left: 0;
+          right: 0;
+        }
+      }
+      &__start, &__end {
+        background-color: #fff;
+        z-index: 2;
+      }
+      &__start {
+        padding-right: 8px;
+      }
+      &__end {
+        padding-left: 8px;
+      }
+      .icon {
+        width: 53px;
+        height: 53px;
+        margin-right: 10px;
+        margin-left: -4.5px;
+      }
+    }
+
     .member {
       width: 175px;
+      height: 44px;
       margin-right: 30px;
 
       .member__inner {
