--- a/src/Page.css
+++ b/src/Page.css
@@ -106,42 +106,19 @@
       width: 593px;
       height: 44px;
 
+      .border-box {
+        width: 88px;
+        margin-right: 14px;
+        font-size: 12px;
+        line-height: 20px;
+      }
+
       &__inner {
         width: 534px;
         height: 44px;
       }
-      &__day {
-        width: 88px;
-        margin-right: 14px;
-        border: 1px solid var(--border-color-gray);
-        border-radius: 3px;
-        font-size: 12px;
-        text-align: center;
-        line-height: 20px;
-      }
       &__between {
         width: 150px;
-
-        &::after {
-          content: "";
-          width: 100%;
-          height: 1px;
-          border-top: 1px dotted #4d4d54;
-          position: absolute;
-          top: 50%;
-          left: 0;
-          right: 0;
-        }
-      }
-      &__start, &__end {
-        background-color: #fff;
-        z-index: 2;
-      }
-      &__start {
-        padding-right: 8px;
-      }
-      &__end {
-        padding-left: 8px;
       }
       .icon {
         width: 53px;
