--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,19 @@
   width: var(--width-page-content);
 }
 
+.ph-8 {
+  padding-right: 8px;
+  padding-left: 8px;
+}
+
+.pr-8 {
+  padding-right: 8px;
+}
+
+.pl-8 {
+  padding-left: 8px;
+}
+
 .bg-primary {
   background-color: var(--color-primary);
 }
@@ -30,6 +43,32 @@
 
 .border-b {
   border-bottom: 1px solid var(--border-color-gray);
+}
+
+.border-box {
+  border: 1px solid var(--border-color-gray);
+  border-radius: 3px;
+  text-align: center;
+}
+
+.dot-line {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 1px;
+    border-top: 1px dotted #4d4d54;
+    content: "";
+  }
+}
+
+.bg-white-z {
+  background: #fff;
+  z-index: 2;
 }
 
 html {
