--- a/src/Card.css
+++ b/src/Card.css
@@ -129,13 +129,20 @@
  * activity
  */
 .activity {
+  .row {
+    width: 234px;
+  }
   .icon {
     width: 21px;
     height: 21px;
   }
   .activity-time {
     margin-bottom: 2px;
-    margin-left: 4px;
+
+    .border-box {
+      margin-right: 14px;
+      width: 80px;
+    }
 
     &__title {
       margin-bottom: 6.5px;
@@ -144,32 +151,13 @@
         line-height: 21px;
       }
     }
-    &__day {
-      margin-right: 6px;
-      border: 1px solid var(--border-color-gray);
-      border-radius: 3px;
-      width: 80px;
-      text-align: center;
-    }
     &__time {
-      width: 144px;
-    }
-    &__start {
-      padding: 0 8px;
-    }
-    &__end {
-      margin-left: auto;
-      padding-left: 8px;
+      width: 136px;
     }
   }
   .activity-goal, .activity-recruit {
     height: 25.5px;
     line-height: 25.5px;
-  }
-  .activity-goal {
-    .text-around {
-      padding-right: 6px;
-    }
   }
 }
 
@@ -278,36 +266,11 @@
   font-weight: bold;
 }
 
-.dot-line {
-  position: relative;
-
-  &::after {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 1px;
-    border-top: 1px dotted #4d4d54;
-    content: "";
-  }
-  .text-around {
-    padding: 0 8px;
-    background: #fff;
-    z-index: 2;
-  }
-}
-
 /**
  * utility
  */
 .text-l {
   font-size: 1.5rem;
   font-weight: bold;
-}
-
-.bg-white {
-  background: #fff;
-  z-index: 2;
 }
 }
