--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,12 @@
   width: var(--width-page-content);
 }
 
-.ph-8 {
-  padding-right: 8px;
-  padding-left: 8px;
+.pl-4 {
+  padding-left: 4px;
 }
-
 .pr-8 {
   padding-right: 8px;
 }
-
 .pl-8 {
   padding-left: 8px;
 }
