--- a/src/Page.css
+++ b/src/Page.css
@@ -57,6 +57,10 @@
  * detail
  */
 .detail {
+  .activity, .requirement {
+    height: 85px;
+    font-size: 22px;
+  }
   .text {
     font-size: 22px;
     line-height: 22px;
@@ -99,9 +103,6 @@
     }
   }
   .activity {
-    height: 85px;
-    font-size: 22px;
-
     .times {
       width: 593px;
       height: 44px;
@@ -134,9 +135,6 @@
       height: 44px;
       margin-right: 30px;
 
-      .text {
-        margin-top: 3px;
-      }
       .icon-wrapper {
         width: 44px;
         height: 44px;
@@ -149,7 +147,35 @@
     }
   }
   .requirement {
-
+    .dc {
+      .icon-wrapper {
+        width: 44px;
+        height: 44px;
+        margin-right: 15px;
+      }
+    }
+    .role {
+      .icon-wrapper {
+        width: 44px;
+        height: 44px;
+        margin-right: 15px;
+      }
+      .icon {
+        width: 32px;
+        height: 32px;
+      }
+    }
+    .recruit {
+      .icon-wrapper {
+        width: 44px;
+        height: 44px;
+        margin-right: 15px;
+      }
+      .icon {
+        width: 40px;
+        height: 40px;
+      }
+    }
   }
 }
 }
