--- a/src/Page.css
+++ b/src/Page.css
@@ -8,6 +8,7 @@
     color: #fff;
   }
   .detail {
+    margin-bottom: 60px;
     padding: 30px 104px 30px 94px;
     border-left: 10px solid var(--color-primary);
     border-radius: 8px;
@@ -57,11 +58,22 @@
  * detail
  */
 .detail {
-  .activity, .requirement {
+  .activity, .requirement, .tags {
     height: 85px;
-    font-size: 22px;
+  }
+  .member, .recruit {
+    width: 175px;
+    height: 44px;
+    margin-right: 30px;
+  }
+
+  .icon-wrapper {
+    width: 44px;
+    height: 44px;
+    margin-right: 15px;
   }
   .text {
+    margin-top: 3px;
     font-size: 22px;
     line-height: 22px;
   }
@@ -70,6 +82,7 @@
     line-height: 11px;
     color: #9a9aa1;
   }
+
   .header {
     padding-bottom: 24px;
 
@@ -131,15 +144,6 @@
       }
     }
     .member {
-      width: 175px;
-      height: 44px;
-      margin-right: 30px;
-
-      .icon-wrapper {
-        width: 44px;
-        height: 44px;
-        margin-right: 15px;
-      }
       .icon {
         width: 36px;
         height: 36px;
@@ -156,26 +160,91 @@
     }
     .role {
       .icon-wrapper {
-        width: 44px;
-        height: 44px;
-        margin-right: 15px;
+        padding-left: 1px;
       }
       .icon {
         width: 32px;
         height: 32px;
       }
+      .role-inner {
+        width: 240px;
+        margin-top: 3px;
+
+        .title {
+          .icon {
+            margin-right: 4.25px;
+            margin-left: 1.5px;
+          }
+        }
+        .icon {
+          width: 20px;
+          height: 20px;
+        }
+        .tank, .healer, .dps, .done {
+          padding: 1px;
+          border-radius: 4px;
+        }
+        .tank {
+          background-color: #1919e6;
+        }
+        .healer {
+          background-color: #228b22;
+        }
+        .dps {
+          background-color: #c61b25;
+        }
+        .either-one {
+          margin-right: 15px;
+          margin-left: 15.5px;
+        }
+        .tank .icon,
+        .healer .icon {
+          width: 19px;
+          height: 19px;
+          margin: 0.5px;
+        }
+      }
     }
     .recruit {
-      .icon-wrapper {
-        width: 44px;
-        height: 44px;
-        margin-right: 15px;
-      }
       .icon {
         width: 40px;
         height: 40px;
       }
     }
+  }
+  .tags {
+    font-size: 12px;
+
+    .tags-inner {
+    }
+    .icon-wrapper {
+      width: 30px;
+      height: 30px;
+      margin-right: 4px;
+    }
+    .icon {
+      width: 26px;
+      height: 26px;
+    }
+    .tag {
+      padding: 0 18px;
+      border-radius: 15px;
+      line-height: 30px;
+    }
+    .tag {
+      margin: 0 2px;
+
+      &:nth-child(2) {
+        margin-left: 0;
+      }
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .comment {
+    padding-top: 30px;
+    font-size: 14px;
   }
 }
 }
