--- a/src/Pages.css
+++ b/src/Pages.css
@@ -4,7 +4,7 @@
 .pages {
   .search {
     width: 904px;
-    margin: 0 auto;
+    margin: 40px auto 30px;
 
     @media screen and (min-width: calc(312px * 4)) {
       width: calc(312px * 4 - 32px);
@@ -29,6 +29,24 @@
 }
 
 .pages {
+.search {
+  .search-button {
+    width: 124px;
+    height: 60px;
+    padding-left: 10px;
+    background-color: #ebb50a;
+    font-size: 14px;
+    box-shadow: 7px 12px 24px 0px rgb(235 181 10 / 20%);
+  }
+  .icon-wrapper {
+    width: 42px;
+  }
+  .icon {
+    width: 32px;
+    height: 32px;
+  }
+}
+
 }
 
 .link {
