--- a/src/Pages.css
+++ b/src/Pages.css
@@ -37,6 +37,7 @@
     background-color: #ebb50a;
     font-size: 14px;
     box-shadow: 7px 12px 24px 0px rgb(235 181 10 / 20%);
+    cursor: pointer;
   }
   .icon-wrapper {
     width: 42px;
@@ -44,6 +45,29 @@
   .icon {
     width: 32px;
     height: 32px;
+  }
+  .category {
+    width: calc(100% - 138px);
+    height: 60px;
+    font-size: 16px;
+
+    .all {
+      width: 22%;
+    }
+    .fc {
+      width: 28%;
+    }
+    .ls {
+      width: 25%;
+    }
+    .party {
+      width: 25%;
+
+      .icon {
+        width: 32px;
+        height: 32px;
+      }
+    }
   }
 }
 
