募集一覧の調整

--- a/src/Pages.css
+++ b/src/Pages.css
@@ -104,15 +104,13 @@
     line-height: 28px;
   }
 }
-}
-
-.link {
-  width: 280px;
-  margin: auto;
-  display: block;
-  text-decoration-line: none;
-
-  * {
+.cards {
+  .link {
+    margin: 0 16px;
+    padding-bottom: 72px;
     cursor: pointer;
+    display: block;
+    text-decoration-line: none;
   }
+}
 }
